# udacity-dsnd-pipelines-project

./: .gitignore  README.md  project.ipynb  pyproject.toml
